--- a/conhecaladynewton.html
+++ b/conhecaladynewton.html
@@ -41,7 +41,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                          <img src="assets/images/estampa1invertida-01-01-2-102x144.png" alt="Mobirise" title="" style="height: 5.5rem;">
                     </a>
                 </span>
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="progress-bars3 cid-rOUva1ME2T" id="progress-bars3-10">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="progress-bars3 cid-rOUva1ME2T" id="progress-bars3-10">
  
      
 
