--- a/epk.html
+++ b/epk.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                          <img src="assets/images/estampa1invertida-01-01-2-102x144.png" alt="Mobirise" title="" style="height: 5.5rem;">
                     </a>
                 </span>
@@ -62,7 +62,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/d">site maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
