--- a/espacodofa.html
+++ b/espacodofa.html
@@ -47,7 +47,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                          <img src="assets/images/estampa1invertida-01-01-2-102x144.png" alt="Mobirise" title="" style="height: 5.5rem;">
                     </a>
                 </span>
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
     
      
 
@@ -193,7 +193,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="az9U8EmtGOGJyFKpjCWRTYoqEIMpSsYzTMueIVJqoYX4DsfS/elp6YblEFDPJ1qINeHuQuE5N3dud8T7baYj89yYgRA2Iqjals1mVL2VGXjNk5jzUyzQe3jwY9JleSgg">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Fp9AWvueXbE96JCYQYyqAz2TO+InHSt+7bzp5Y/ls0Fv4B9NI5LmALXf9K1UIUyKRujWcDmDOWTmYKXUjW+x01u6Ryw24hU8cKLmUx6vMEbzihBID/wtRt5ccjC1nLyy">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
