--- a/historia.html
+++ b/historia.html
@@ -45,7 +45,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                          <img src="assets/images/estampa1invertida-01-01-2-102x144.png" alt="Mobirise" title="" style="height: 5.5rem;">
                     </a>
                 </span>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="timeline2 cid-rOUe2L5vks" id="timeline2-l">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="timeline2 cid-rOUe2L5vks" id="timeline2-l">
 
     
 
