--- a/videos.html
+++ b/videos.html
@@ -44,7 +44,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                          <img src="assets/images/estampa1invertida-01-01-2-102x144.png" alt="Mobirise" title="" style="height: 5.5rem;">
                     </a>
                 </span>
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section class="mbr-section content4 cid-rOUsywvxfC" id="content4-y">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content4 cid-rOUsywvxfC" id="content4-y">
 
     
 
