--- a/espacodofa.html
+++ b/espacodofa.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
     
      
 
@@ -168,7 +168,7 @@
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
                             Flappy Newton</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Temos um jogo no modelo Flappy Bird! Use toda a sua habilidade para fazer com que Caio desvie dos obstáculos!  O recordista leva uma camisa da Banda para casa!</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Temos um jogo no modelo Flappy Bird! Use toda a sua habilidade para fazer com que Caio desvie dos obstáculos!  O recordista leva uma camisa da Banda para casa!<br><br><br></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary-outline display-4"><span class="mbri-android mbr-iconfont mbr-iconfont-btn"></span>
                             Flappy Newton</a></div>
@@ -197,7 +197,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="E30yg1cBNFIyWKOF9N8S4+Mj2R+6WUSOiCTvfe81m0tNDMTzxZ31yAMZE1nH7z/dGWBhAVSK3DJ495PS8QjrOQ1+zhGTggwFIgzp7i/N7/IhfBgonGNguPcp60LU99HJ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6tMbxenMxWOTnPqzcCyofArWUW4VoLHYm6n5nvYxrnNhplRHuHZRhCtWHPikh7Ky7d+cZZRZ8Gx6TVW3UbZljO/TgNA5nTWpHNxGhwYsQsKBWLnacEMYfIZATbeDb9Nu">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
