create github pages

--- a/videos.html
+++ b/videos.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="mbr-section content4 cid-rOUsywvxfC" id="content4-y">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-rOUsywvxfC" id="content4-y">
 
     
 
