create github pages

--- a/historia.html
+++ b/historia.html
@@ -14,14 +14,13 @@
   <meta name="description" content="Toda a história da lady newton contada em quadrinhos, desde a fundação da banda até os primeiros shows. ">
   
   <title>HQs da Lady</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -66,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="timeline2 cid-rOUe2L5vks" id="timeline2-l">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="timeline2 cid-rOUe2L5vks" id="timeline2-l">
 
     
 
@@ -74,19 +73,19 @@
 
     <div class="container align-center">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style display-1">
-            Historia da banda em Quadrinhos</h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5">Tudo em ordem cronológica, clique no icone para ler!</h3>
+            História da banda em Quadrinhos</h2>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5">Tudo em ordem cronológica, clique nos links para ler!</h3>
 
         <div class="container timelines-container" mbri-timelines="">
             <!--1-->
             <div class="row timeline-element reverse separline">
                 <span class="iconsBackground">
-                    <a href="http://online.fliphtml5.com/splac/fiah" target="_blank"><span class="mbr-iconfont mbrib-rocket" style="color: rgb(204, 41, 82); fill: rgb(204, 41, 82);"></span></a>
+                    <span class="mbr-iconfont mbri-flag" style="color: rgb(204, 41, 82); fill: rgb(204, 41, 82);"></span>
                 </span>          
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-2">Fundação da Banda</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">A ideia de formar uma banda começou com Caio , Vitor e Eduardo em Junho de 2016, os meninos demoraram um tempo considerável para formar a banda, porque faltava um baixista. A Lady só iniciou com a formação oficial em maio de 2017.<br><br>Nesse quadrinho é contado todo o processo de formação da banda e a saga para achar o 4º membro da Lady Newton.<br><br></p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">A ideia de formar uma banda começou com Caio , Vitor e Eduardo em Junho de 2016, os meninos demoraram um tempo considerável para formar a banda, porque faltava um baixista. A Lady só iniciou com a formação oficial em maio de 2017.<br><br>Nesse quadrinho é contado todo o processo de formação da banda e a saga para achar o 4º membro da Lady Newton.<br><br><a href="http://online.fliphtml5.com/splac/fiah" target="_blank">Visualizar HQ #1</a><br><br></p>
                      </div>
                 </div>
             </div>
@@ -98,7 +97,7 @@
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-2">27 de Maio de 2017, Primeiro Show:</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">Dizem que o primeiro show com cachê de toda banda que ta começando é inesquecível.<br><br> No caso da Lady Newton não foi diferente, passamos por uma situação complicada e nesse quadrinho nós contamos tudo!<br><br></p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Dizem que o primeiro show com cachê de toda banda que ta começando é inesquecível.<br><br> No caso da Lady Newton não foi diferente, passamos por uma situação complicada e nesse quadrinho nós contamos tudo!<br><br><a href="https://online.fliphtml5.com/splac/orhh/" target="_blank">Visualizar HQ #2</a><br><br></p>
                     </div>
                 </div>
             </div>
@@ -135,7 +134,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     Aguarde os próximos capítulos!</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7">Para não perder quando novas HQs forem lançadas, inscreva-se na nossa lista de emails!</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7">Para não perder quando novas HQs forem lançadas, inscreva-se na nossa lista de e-mails!</h3>
                 <div class="mbr-section-btn align-center py-4"><a class="btn btn-secondary-outline display-2" href="espacodofa.html#form3-g">Inscrever-se na lista&nbsp;</a></div>
             </div>
         </div>
@@ -143,15 +142,15 @@
 </section>
 
 
-  <script src="assets/popper/popper.min.js"></script>
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
