--- a/espacodofa.html
+++ b/espacodofa.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
+<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="mbr-section article content9 cid-rOTc7gMGHD" id="content9-9">
     
      
 
@@ -96,7 +96,7 @@
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
                             História da Banda em Quadrinhos</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Aqui a gente explica toda a origem da Lady Newton, desde a criação do nome até a entrada dos membros na banda e os primeiros shows, vale a pena tirar um tempinho para ler!</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Aqui a gente explica toda a origem da Lady Newton, desde a criação do nome até a entrada dos membros na banda e os primeiros shows. Vale a pena tirar um tempinho para ler!</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="historia.html" class="btn btn-secondary-outline display-4"><span class="mobi-mbri mobi-mbri-windows mbr-iconfont mbr-iconfont-btn"></span>
                             HQs da Lady&nbsp;</a></div>
@@ -109,11 +109,11 @@
                         <img src="assets/images/whatsapp-image-2020-01-28-at-4.34.48-pm-676x676.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">Videos da Banda</h4>
+                        <h4 class="card-title mbr-fonts-style display-7">Vídeos da Banda</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Se você curte escutar a banda em ação, clica aqui pra gente te direcionar para nossa biblioteca de videos!<br><br></p>
+                            Se você curte escutar a banda em ação, clica aqui pra gente te direcionar para nossa biblioteca de vídeos!<br><br></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="videos.html" class="btn btn-secondary-outline display-4"><span class="mobi-mbri mobi-mbri-video-play mbr-iconfont mbr-iconfont-btn"></span>Videos da Lady</a></div>
+                    <div class="mbr-section-btn text-center"><a href="videos.html" class="btn btn-secondary-outline display-4"><span class="mobi-mbri mobi-mbri-video-play mbr-iconfont mbr-iconfont-btn"></span>Vídeos da Lady</a></div>
                 </div>
             </div>
 
@@ -170,7 +170,7 @@
                             Flappy Newton</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Temos um jogo no modelo Flappy Bird! Use toda a sua habilidade para fazer com que Caio desvie dos obstáculos!  O recordista leva uma camisa da Banda para casa!<br><br><br></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary-outline display-4"><span class="mbri-android mbr-iconfont mbr-iconfont-btn"></span>
+                    <div class="mbr-section-btn text-center"><a href="https://flappycreator.com/flappy.php?id=5de12d51eae1b" class="btn btn-secondary-outline display-4" target="_blank"><span class="mbri-android mbr-iconfont mbr-iconfont-btn"></span>
                             Flappy Newton</a></div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QVIqSI2rTeUqHEtVN+Uo9+st7GK18L7PqS1GC76RWx41RK36cLXZRaiBNHlkWLMzqFMrAYZCYe0toW9Tmwo1ssVN/MrlfUAGMRdIYwbrJAwcGDqbeYAiEwemoBW3+fXY">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="t6rlFHNGaRtQIXG1MwTjN7G6uuYGFKo3j02tJB6lXKOs6SRlVnigcLZTw+Lpa3QPUYOqQt0BJzHuY4YmsZfT/qstS6nDekZ5Lp+BYGJlr2zCLDT//YeXFGeSFD60nxma">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por se inscrever na lista de fãs!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
