create github pages

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(19, 19, 19);"></div>
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(19, 19, 19);"></div>
 
     <div class="container align-center">
         <div class="row justify-content-md-center">
