--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="twitter:title" content="Página Inicial">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
-  <meta name="description" content="Essa é uma banda fundada por 4 engenheiros, que tocam o melhor do rock'n'roll. Nesse site você vai encontrar memes, videos engraçados e muito rock de garagem!">
+  <meta name="description" content="Rock'n'Rol Perfeitamente Calculado. Nesse site da Lady Newton você vai encontrar memes, videos engraçados e muito rock de garagem!">
   
   <title>Página Inicial</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
