create github pages

--- a/epk.html
+++ b/epk.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section content4 cid-rOZvLnrSaa" id="content4-1k">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-section content4 cid-rOZvLnrSaa" id="content4-1k">
 
     
 
@@ -160,7 +160,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" href="https://mobirise.co">&nbsp;OUTROS VÍDEOS DA BANDA</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" href="videos.html" target="_blank">&nbsp;OUTROS VÍDEOS DA BANDA</a></div>
             </div>
         </div>
     </div>
@@ -185,7 +185,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uSOTfS6Qcw9lFmIOZeS0k9GtayOKw5h7jeCt/Yr5B9Z5zFKQ640r65VblflAIfyv+cCNhxhlFeES/DAQHruFlkqHC4ZQJj3CE6PUTG/QqPVyIqmbeBe86l+VQTP4D+F8">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yiI+PP5MuwLVHsUf3vAY64O6aVPFRm08SbIG5WipWVlkU+qf1nNycuW3VI5EplTBd1FCCjLWk63YturSEzaWXs4duQ20fWdKzxqXVCSLeARUHtHHs563pFBRfCm5O1cO">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
