--- a/conhecaladynewton.html
+++ b/conhecaladynewton.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header1 cid-rOYVTbnG4n" id="header16-1d">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header1 cid-rOYVTbnG4n" id="header16-1d">
 
     
 
@@ -165,7 +165,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-1">
                             Diogo Leal</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Graduado em Engenharia Mecânica, Engenheiro de projetos de uma das maiores montadoras de carros do País. Diogo é o baixista mais querido do Recife. Ele entrou foi a peça que faltava para começar a banda e chegou para ficar. Além do baixo, Diogo também é vocalista e canta algumas musicas do nosso setlist.<br>Um rapaz de ouro, Diogo é o árbitro entre as frequentes discussões entre Caio e Vitor, Diogo é quem dá a palavra final e desempata o argumento, ele é o verdadeiro RH da banda.<br><br><br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Graduado em Engenharia Mecânica, Engenheiro de projetos de uma das maiores montadoras de carros do País. Diogo é o baixista mais querido do Recife. Ele foi a peça que faltava para começar a banda e chegou para ficar. Além do baixo, Diogo também é vocalista e canta algumas musicas do nosso setlist.<br>Um rapaz de ouro, Diogo é o árbitro entre as frequentes discussões entre Caio e Vitor, Diogo é quem dá a palavra final e desempata o argumento, ele é o verdadeiro RH da banda.<br><br><br></p>
                     </div>
                 </div>
             </div>
