create github pages

--- a/conhecaladynewton.html
+++ b/conhecaladynewton.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-rOYVTbnG4n" id="header16-1d">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header1 cid-rOYVTbnG4n" id="header16-1d">
 
     
 
@@ -94,7 +94,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><br><br>Recifenses de coração e viciados em rock'n'roll, os amigos da faculdade de engenharia decidiram fundar uma banda para continuar a se reencontrar depois da formatura. Mal sabiam eles que esse projeto iria ser mais do que um simples hobby. a <strong>Lady Newton </strong>começou tocando em festas de aniversário de colegas e hoje toca nos melhores bares da cidade!<br><br><br></p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><br><br>Recifenses de coração e viciados em Rock 'n' roll, os amigos da faculdade de engenharia decidiram fundar uma banda para continuar a se reencontrar depois da formatura. Mal sabiam eles que esse projeto iria ser mais do que um simples hobby. A&nbsp;<strong>Lady Newton </strong>começou tocando em festas de aniversário de colegas e hoje toca nos melhores bares da cidade!<br><br><br></p>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-1"><strong>
                             Caio Neves</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Graduado em Engenharia Mecânica, empresário do ramo de extintores durante o dia e a noite tem o papel de <em>Frontman </em>da banda. Musicalmente, Caio sempre buscou aprender com professores mais experientes, ele faz aula de canto e de guitarra, para poder dar o seu melhor na Lady Newton.<br>Caio sempre foi empreendedor e a Lady virou o seu laboratório para experiencias &nbsp;(nem sempre bem sucedidas) em marketing e gestão. Os meninos precisam freiar de vez em quando, senão ninguém aguenta tanta coisa ao mesmo tempo!<br><br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Graduado em Engenharia Mecânica, empresário do ramo de extintores durante o dia e à noite tem o papel de <em>Frontman </em>da banda. Musicalmente, Caio sempre buscou aprender com professores mais experientes, ele faz aula de canto e de guitarra, para poder dar o seu melhor na Lady Newton.<br>Caio sempre foi empreendedor e a Lady virou o seu laboratório para experiencias &nbsp;(nem sempre bem sucedidas) em marketing e gestão. Os meninos precisam freiar de vez em quando, senão ninguém aguenta tanta coisa ao mesmo tempo!<br><br></p>
                     </div>
                 </div>
             </div>
@@ -165,7 +165,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-1">
                             Diogo Leal</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Graduado em Engenharia Mecânica, Engenheiro de projetos de uma das maiores montadoras de carros do país. Diogo é o baixista mais querido do Recife. Ele foi a peça que faltava para começar a banda e chegou para ficar. Além do baixo, Diogo também é vocalista e canta algumas musicas do nosso setlist.<br>Um rapaz de ouro, Diogo é o árbitro entre as frequentes discussões entre Caio e Vitor, Diogo é quem dá a palavra final e desempata o argumento, ele é o verdadeiro RH da banda.<br><br><br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Graduado em Engenharia Mecânica, engenheiro de projetos de uma das maiores montadoras de carros do país. Diogo é o baixista mais querido do Recife. Ele foi a peça que faltava para começar a banda e chegou para ficar. Além do baixo, Diogo também é vocalista e canta algumas musicas do nosso setlist.<br>Um rapaz de ouro, Diogo é o árbitro entre as frequentes discussões entre Caio e Vitor. Diogo é quem dá o ponto final e desempata o argumento, ele é o verdadeiro RH da banda.<br><br><br></p>
                     </div>
                 </div>
             </div>
