create github pages

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -78,7 +78,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
                     Lady Newton</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Fundada por 4 engenheiros, a Lady Newton descobriu uma forma descontraída de tocar o bom e velho Rock 'n' roll. &nbsp;O Instagram da banda sempre foi o ponto de encontro dos fãs, mas acabou ficando pequeno para a quantidade de memes, músicas e vídeos. Chegou a hora da Lady invadir a web!<br><br>Mas para poder continuar, eu preciso saber, você conhece a Lady Newton?</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Fundada por 4 engenheiros, a Lady Newton descobriu uma forma descontraída de tocar o bom e velho rock 'n' roll. &nbsp;O Instagram da banda sempre foi o ponto de encontro dos fãs, mas acabou ficando pequeno para a quantidade de memes, músicas e vídeos. Chegou a hora da Lady invadir a web!<br><br>Mas para poder continuar, eu preciso saber, você conhece a Lady Newton?</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-2" href="espacodofa.html">Já sou fã</a>
                     <a class="btn btn-md btn-white-outline display-2" href="conhecaladynewton.html">Nunca Ouvi Falar</a></div>
             </div>
