--- a/epk.html
+++ b/epk.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section content4 cid-rOZvLnrSaa" id="content4-1k">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content4 cid-rOZvLnrSaa" id="content4-1k">
 
     
 
@@ -121,7 +121,7 @@
                         
                     </div>
                     <!--Btn-->
-                    <div class="mbr-section-btn pt-3 align-center"><a href="assets/files/LadyRelease.pdf" class="btn btn-secondary-outline display-4" target="_blank">Download</a></div>
+                    <div class="mbr-section-btn pt-3 align-right"><a href="assets/files/LadyRelease.pdf" class="btn btn-secondary-outline display-4" target="_blank">Download</a></div>
                 </div>
             </div>
         </div>
@@ -185,7 +185,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CVnf3qc40iGaCALRC1j4250pltowxNS/iJnq/1SooZIsDLehk0PK6Ouogxm3uY7L1fEBEjY4U1cmhs47CpKLGG8Dp29jlKh7sBMcWZOhUAz2s6ze2SC/g6CX6a/ninU3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZtyI3sgVXRA2qor37qs7tsVXX7nnQiXyROFmPfs/F/phqmFoA471ytwA9rkIIpb1OpcK2LZwDugB3lfEJXnbUHkZc/Pfa9kZD7MGZosQYHKwSR0jGgZY2O7tuEPra7wh">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
